# pizza-grpc-rust

./: .dockerignore  Cargo.toml  Dockerfile  build.rs  cdk.context.json  cdk.json  package-lock.json  package.json
cdk/lib/: cdk-stack.ts
proto/: pizza.proto
src/: pizza.rs  server.rs
src/pizza/: aws.rs
