[package]
name = "grpc-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "0.2"
aws-config = "0.0.25-alpha"
aws-endpoint = "0.0.25-alpha"
aws-sdk-dynamodb = "0.0.25-alpha"
prost = "0.9"
tokio = { version = "1.0", features = ["full"] }
tonic = "0.6"

[build-dependencies]
tonic-build = "0.6"

[[bin]] 
name = "server"
path = "src/server.rs"